# CUTLASS-Examples

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  compile.sh  download_cmake.sh  run.sh
examples/: CMakeLists.txt  README.md
examples/backup/cute_tiled_copy/: CMakeLists.txt  tiled_copy.cu
examples/backup/gemm_api_v2/: README.md
examples/cute_general_matrix_multiplication/: CMakeLists.txt  README.md  cute_general_matrix_multiplication.cu  cute_general_matrix_multiplication.cuh  cute_general_matrix_multiplication.hpp  cute_general_matrix_multiplication_config.cuh  cute_general_matrix_multiplication_naive.cu  cute_general_matrix_multiplication_naive_gmem_tiled_copy_tiled_mma.cu  cute_general_matrix_multiplication_naive_gmem_tiled_copy_tiled_mma_sm70_pipeline.cu  cute_general_matrix_multiplication_naive_tiled_copy.cu  cute_general_matrix_multiplication_naive_tiled_copy_tiled_mma.cu  cute_general_matrix_multiplication_naive_tiled_copy_tiled_mma_sm70_pipeline.cu  cute_general_matrix_multiplication_naive_vectorized.cu  cute_general_matrix_multiplication_tensor_core_gmem_tiled_copy_smem_tiled_copy_tiled_mma.cu  cute_general_matrix_multiplication_tensor_core_gmem_tiled_copy_smem_tiled_copy_tiled_mma_sm80_pipeline.cu  cute_general_matrix_multiplication_tensor_core_gmem_tiled_copy_tiled_mma.cu  cute_general_matrix_multiplication_tensor_core_gmem_tiled_copy_tiled_mma_sm80_pipeline.cu  cute_general_matrix_multiplication_tensor_core_tiled_copy_tiled_mma.cu  cute_general_matrix_multiplication_tensor_core_tiled_copy_tiled_mma_sm70_pipeline.cu  cute_general_matrix_multiplication_tensor_core_tiled_copy_tiled_mma_sm80_pipeline.cu  sgemm_1.cu  sgemm_2.cu  sgemm_reed_simple.cu
examples/cute_general_matrix_multiplication/backup/: sgemm_1.cu  sgemm_2.cu
examples/cute_general_matrix_multiplication/tests/: CMakeLists.txt  profile_general_matrix_multiplication.cu  profile_general_matrix_multiplication_naive.cu  profile_general_matrix_multiplication_naive_tiled_copy.cu  profile_general_matrix_multiplication_naive_tiled_copy_tiled_mma.cu  profile_general_matrix_multiplication_naive_tiled_copy_tiled_mma_sm70_pipeline.cu  profile_general_matrix_multiplication_naive_vectorized.cu  profile_general_matrix_multiplication_tensor_core_gmem_tiled_copy_smem_tiled_copy_tiled_mma.cu  profile_general_matrix_multiplication_tensor_core_gmem_tiled_copy_smem_tiled_copy_tiled_mma_sm80_pipeline.cu  profile_general_matrix_multiplication_tensor_core_gmem_tiled_copy_tiled_mma.cu  profile_general_matrix_multiplication_tensor_core_gmem_tiled_copy_tiled_mma_sm80_pipeline.cu  profile_general_matrix_multiplication_tensor_core_tiled_copy_tiled_mma.cu  profile_general_matrix_multiplication_tensor_core_tiled_copy_tiled_mma_sm70_pipeline.cu  profile_general_matrix_multiplication_tensor_core_tiled_copy_tiled_mma_sm80_pipeline.cu  profile_sgemm_1.cu  profile_sgemm_2.cu  test_general_matrix_multiplication.cu  test_general_matrix_multiplication_naive.cu  test_general_matrix_multiplication_naive_gmem_tiled_copy_tiled_mma_sm70_pipeline.cu  test_general_matrix_multiplication_naive_tiled_copy.cu  test_general_matrix_multiplication_naive_tiled_copy_tiled_mma.cu  test_general_matrix_multiplication_naive_tiled_copy_tiled_mma_sm70_pipeline.cu  test_general_matrix_multiplication_naive_vectorized.cu  test_general_matrix_multiplication_tensor_core_gmem_tiled_copy_smem_tiled_copy_tiled_mma.cu  test_general_matrix_multiplication_tensor_core_gmem_tiled_copy_smem_tiled_copy_tiled_mma_sm80_pipeline.cu  test_general_matrix_multiplication_tensor_core_gmem_tiled_copy_tiled_mma.cu  test_general_matrix_multiplication_tensor_core_gmem_tiled_copy_tiled_mma_sm80_pipeline.cu  test_general_matrix_multiplication_tensor_core_tiled_copy_tiled_mma.cu  test_general_matrix_multiplication_tensor_core_tiled_copy_tiled_mma_sm70_pipeline.cu  test_general_matrix_multiplication_tensor_core_tiled_copy_tiled_mma_sm80_pipeline.cu  test_sgemm_2.cu  test_utils.hpp
examples/cute_matrix_transpose/: CMakeLists.txt  README.md  cute_matrix_transpose.hpp  cute_matrix_transpose_naive.cu  cute_matrix_transpose_shared_memory.cu
examples/cute_matrix_transpose/tests/: CMakeLists.txt  profile_matrix_transpose_naive_coalesced_read.cu  profile_matrix_transpose_naive_coalesced_write.cu  profile_matrix_transpose_ncu.cu  profile_matrix_transpose_shared_memory_bank_conflict_read.cu  profile_matrix_transpose_shared_memory_bank_conflict_write.cu  profile_matrix_transpose_shared_memory_padded.cu  profile_matrix_transpose_shared_memory_swizzled.cu  profile_matrix_transpose_shared_memory_vectorized_bank_conflict_read.cu  profile_matrix_transpose_shared_memory_vectorized_padded.cu  (+11 more)
examples/cute_swizzle_preview/: CMakeLists.txt  README.md  cute_swizzle_preview.cu
examples/cute_tiled_copy/: CMakeLists.txt  tiled_copy.cu
examples/cute_tiled_copy_2/: CMakeLists.txt  tiled_copy.cu
examples/cute_tiled_mma_preview/: CMakeLists.txt  README.md  cute_tiled_mma_preview.cu
examples/cute_transpose/: CMakeLists.txt  README.md  cute_transpose.cuh  cute_transpose.hpp  cute_transpose_naive.cu  cute_transpose_naive_coalesced_read.cu  cute_transpose_naive_coalesced_write.cu  cute_transpose_shared_memory.cu  cute_transpose_shared_memory_bank_conflict.cu  cute_transpose_shared_memory_bank_conflict_read.cu  cute_transpose_shared_memory_bank_conflict_write.cu  cute_transpose_shared_memory_bank_conflicts.bak  cute_transpose_shared_memory_bank_conflicts.cu  cute_transpose_shared_memory_bank_conflicts_read.cu  cute_transpose_shared_memory_bank_conflicts_write.cu  cute_transpose_shared_memory_padded.cu  cute_transpose_shared_memory_swizzled.cu
examples/cute_transpose_naive/: CMakeLists.txt  cute_transpose_naive.cu  cute_transpose_naive.cuh  cute_transpose_naive.hpp
examples/cute_vector_copy/: CMakeLists.txt  README.md  cute_vector_copy.cu  cute_vector_copy.hpp  cute_vector_copy_vectorized.cu
examples/gemm_api_v2/: CMakeLists.txt
examples/gemm_api_v3/: CMakeLists.txt  README.md  helper.h
src/: CMakeLists.txt  app_cutlass_gemm_api_2x.cu  app_cutlass_gemm_api_3x.cu
(+33 files in other folders)
