cmake_minimum_required(VERSION 3.28)

project(CUTE-GENERAL-MATRIX-MULTIPLICATION-TEST VERSION 0.0.1 LANGUAGES CXX CUDA)

find_package(GTest REQUIRED)
find_package(CUDAToolkit REQUIRED)

find_path(CUTE_GENERAL_MATRIX_MULTIPLICATION_INCLUDE cute_general_matrix_multiplication.hpp HINTS ${CMAKE_SOURCE_DIR}/examples/cute_general_matrix_multiplication/)

add_executable(test_sgemm_1 test_sgemm_1.cu)
target_include_directories(test_sgemm_1 PRIVATE ${CUTE_GENERAL_MATRIX_MULTIPLICATION_INCLUDE} ${CUTLASS_INCLUDE_DIR} ${CUTLASS_UTILS_INCLUDE_DIR})
target_link_libraries(test_sgemm_1 GTest::gtest GTest::gtest_main ${CUTE_GENERAL_MATRIX_MULTIPLICATION} CUDA::cublas)
set_target_properties(test_sgemm_1 PROPERTIES CUDA_ARCHITECTURES native)

add_test(TestAllGeneralMatrixMultiplicationSGemm1 test_sgemm_1)

add_executable(profile_sgemm_1 profile_sgemm_1.cu)
target_include_directories(profile_sgemm_1 PRIVATE ${CUTE_GENERAL_MATRIX_MULTIPLICATION_INCLUDE} ${CUTLASS_INCLUDE_DIR} ${CUTLASS_UTILS_INCLUDE_DIR})
target_link_libraries(profile_sgemm_1 GTest::gtest GTest::gtest_main ${CUTE_GENERAL_MATRIX_MULTIPLICATION} CUDA::cublas)
set_target_properties(profile_sgemm_1 PROPERTIES CUDA_ARCHITECTURES native)

add_test(ProfileAllGeneralMatrixMultiplicationSGemm1 profile_sgemm_1)

add_executable(test_sgemm_2 test_sgemm_2.cu)
target_include_directories(test_sgemm_2 PRIVATE ${CUTE_GENERAL_MATRIX_MULTIPLICATION_INCLUDE} ${CUTLASS_INCLUDE_DIR} ${CUTLASS_UTILS_INCLUDE_DIR})
target_link_libraries(test_sgemm_2 GTest::gtest GTest::gtest_main ${CUTE_GENERAL_MATRIX_MULTIPLICATION} CUDA::cublas)
set_target_properties(test_sgemm_2 PROPERTIES CUDA_ARCHITECTURES native)

add_test(TestAllGeneralMatrixMultiplicationSGemm2 test_sgemm_2)

add_executable(profile_sgemm_2 profile_sgemm_2.cu)
target_include_directories(profile_sgemm_2 PRIVATE ${CUTE_GENERAL_MATRIX_MULTIPLICATION_INCLUDE} ${CUTLASS_INCLUDE_DIR} ${CUTLASS_UTILS_INCLUDE_DIR})
target_link_libraries(profile_sgemm_2 GTest::gtest GTest::gtest_main ${CUTE_GENERAL_MATRIX_MULTIPLICATION} CUDA::cublas)
set_target_properties(profile_sgemm_2 PROPERTIES CUDA_ARCHITECTURES native)

add_test(ProfileAllGeneralMatrixMultiplicationSGemm2 profile_sgemm_2)

add_executable(test_general_matrix_multiplication_naive test_general_matrix_multiplication_naive.cu)
target_include_directories(test_general_matrix_multiplication_naive PRIVATE ${CUTE_GENERAL_MATRIX_MULTIPLICATION_INCLUDE} ${CUTLASS_INCLUDE_DIR} ${CUTLASS_UTILS_INCLUDE_DIR})
target_link_libraries(test_general_matrix_multiplication_naive GTest::gtest GTest::gtest_main ${CUTE_GENERAL_MATRIX_MULTIPLICATION} CUDA::cublas)
set_target_properties(test_general_matrix_multiplication_naive PROPERTIES CUDA_ARCHITECTURES native)

add_test(TestAllGeneralMatrixMultiplicationNaive test_general_matrix_multiplication_naive)

add_executable(profile_general_matrix_multiplication_naive profile_general_matrix_multiplication_naive.cu)
target_include_directories(profile_general_matrix_multiplication_naive PRIVATE ${CUTE_GENERAL_MATRIX_MULTIPLICATION_INCLUDE} ${CUTLASS_INCLUDE_DIR} ${CUTLASS_UTILS_INCLUDE_DIR})
target_link_libraries(profile_general_matrix_multiplication_naive GTest::gtest GTest::gtest_main ${CUTE_GENERAL_MATRIX_MULTIPLICATION} CUDA::cublas)
set_target_properties(profile_general_matrix_multiplication_naive PROPERTIES CUDA_ARCHITECTURES native)

add_test(ProfileAllGeneralMatrixMultiplicationNaive profile_general_matrix_multiplication_naive)

add_executable(test_general_matrix_multiplication_naive_tiled_copy test_general_matrix_multiplication_naive_tiled_copy.cu)
target_include_directories(test_general_matrix_multiplication_naive_tiled_copy PRIVATE ${CUTE_GENERAL_MATRIX_MULTIPLICATION_INCLUDE} ${CUTLASS_INCLUDE_DIR} ${CUTLASS_UTILS_INCLUDE_DIR})
target_link_libraries(test_general_matrix_multiplication_naive_tiled_copy GTest::gtest GTest::gtest_main ${CUTE_GENERAL_MATRIX_MULTIPLICATION} CUDA::cublas)
set_target_properties(test_general_matrix_multiplication_naive_tiled_copy PROPERTIES CUDA_ARCHITECTURES native)

add_test(TestAllGeneralMatrixMultiplicationNaiveTiledCopy test_general_matrix_multiplication_naive_tiled_copy)

add_executable(profile_general_matrix_multiplication_naive_tiled_copy profile_general_matrix_multiplication_naive_tiled_copy.cu)
target_include_directories(profile_general_matrix_multiplication_naive_tiled_copy PRIVATE ${CUTE_GENERAL_MATRIX_MULTIPLICATION_INCLUDE} ${CUTLASS_INCLUDE_DIR} ${CUTLASS_UTILS_INCLUDE_DIR})
target_link_libraries(profile_general_matrix_multiplication_naive_tiled_copy GTest::gtest GTest::gtest_main ${CUTE_GENERAL_MATRIX_MULTIPLICATION} CUDA::cublas)
set_target_properties(profile_general_matrix_multiplication_naive_tiled_copy PROPERTIES CUDA_ARCHITECTURES native)

add_test(ProfileAllGeneralMatrixMultiplicationNaiveTiledCopy profile_general_matrix_multiplication_naive_tiled_copy)

add_executable(test_general_matrix_multiplication_naive_tiled_copy_tiled_mma test_general_matrix_multiplication_naive_tiled_copy_tiled_mma.cu)
target_include_directories(test_general_matrix_multiplication_naive_tiled_copy_tiled_mma PRIVATE ${CUTE_GENERAL_MATRIX_MULTIPLICATION_INCLUDE} ${CUTLASS_INCLUDE_DIR} ${CUTLASS_UTILS_INCLUDE_DIR})
target_link_libraries(test_general_matrix_multiplication_naive_tiled_copy_tiled_mma GTest::gtest GTest::gtest_main ${CUTE_GENERAL_MATRIX_MULTIPLICATION} CUDA::cublas)
set_target_properties(test_general_matrix_multiplication_naive_tiled_copy_tiled_mma PROPERTIES CUDA_ARCHITECTURES native)

add_test(TestAllGeneralMatrixMultiplicationNaiveTiledCopyTiledMma test_general_matrix_multiplication_naive_tiled_copy_tiled_mma)

add_executable(profile_general_matrix_multiplication_naive_tiled_copy_tiled_mma profile_general_matrix_multiplication_naive_tiled_copy_tiled_mma.cu)
target_include_directories(profile_general_matrix_multiplication_naive_tiled_copy_tiled_mma PRIVATE ${CUTE_GENERAL_MATRIX_MULTIPLICATION_INCLUDE} ${CUTLASS_INCLUDE_DIR} ${CUTLASS_UTILS_INCLUDE_DIR})
target_link_libraries(profile_general_matrix_multiplication_naive_tiled_copy_tiled_mma GTest::gtest GTest::gtest_main ${CUTE_GENERAL_MATRIX_MULTIPLICATION} CUDA::cublas)
set_target_properties(profile_general_matrix_multiplication_naive_tiled_copy_tiled_mma PROPERTIES CUDA_ARCHITECTURES native)

add_test(ProfileAllGeneralMatrixMultiplicationNaiveTiledCopyTiledMma profile_general_matrix_multiplication_naive_tiled_copy_tiled_mma)

add_executable(test_general_matrix_multiplication_tensor_core_tiled_copy_tiled_mma test_general_matrix_multiplication_tensor_core_tiled_copy_tiled_mma.cu)
target_include_directories(test_general_matrix_multiplication_tensor_core_tiled_copy_tiled_mma PRIVATE ${CUTE_GENERAL_MATRIX_MULTIPLICATION_INCLUDE} ${CUTLASS_INCLUDE_DIR} ${CUTLASS_UTILS_INCLUDE_DIR})
target_link_libraries(test_general_matrix_multiplication_tensor_core_tiled_copy_tiled_mma GTest::gtest GTest::gtest_main ${CUTE_GENERAL_MATRIX_MULTIPLICATION} CUDA::cublas)
set_target_properties(test_general_matrix_multiplication_tensor_core_tiled_copy_tiled_mma PROPERTIES CUDA_ARCHITECTURES native)

add_test(TestAllGeneralMatrixMultiplicationTensorCoreTiledCopyTiledMma test_general_matrix_multiplication_tensor_core_tiled_copy_tiled_mma)

add_executable(profile_general_matrix_multiplication_tensor_core_tiled_copy_tiled_mma profile_general_matrix_multiplication_tensor_core_tiled_copy_tiled_mma.cu)
target_include_directories(profile_general_matrix_multiplication_tensor_core_tiled_copy_tiled_mma PRIVATE ${CUTE_GENERAL_MATRIX_MULTIPLICATION_INCLUDE} ${CUTLASS_INCLUDE_DIR} ${CUTLASS_UTILS_INCLUDE_DIR})
target_link_libraries(profile_general_matrix_multiplication_tensor_core_tiled_copy_tiled_mma GTest::gtest GTest::gtest_main ${CUTE_GENERAL_MATRIX_MULTIPLICATION} CUDA::cublas)
set_target_properties(profile_general_matrix_multiplication_tensor_core_tiled_copy_tiled_mma PROPERTIES CUDA_ARCHITECTURES native)

add_test(ProfileAllGeneralMatrixMultiplicationTensorCoreTiledCopyTiledMma profile_general_matrix_multiplication_tensor_core_tiled_copy_tiled_mma)
