cmake_minimum_required(VERSION 3.28)

project(CUTE-GENERAL-MATRIX-MULTIPLICATION-TEST VERSION 0.0.1 LANGUAGES CXX CUDA)

find_package(GTest REQUIRED)
find_package(CUDAToolkit REQUIRED)

find_path(CUTE_GENERAL_MATRIX_MULTIPLICATION_INCLUDE cute_general_matrix_multiplication.hpp HINTS ${CMAKE_SOURCE_DIR}/examples/cute_general_matrix_multiplication/)

add_executable(test_general_matrix_multiplication_naive test_general_matrix_multiplication_naive.cu)
target_include_directories(test_general_matrix_multiplication_naive PRIVATE ${CUTE_GENERAL_MATRIX_MULTIPLICATION_INCLUDE} ${CUTLASS_INCLUDE_DIR} ${CUTLASS_UTILS_INCLUDE_DIR})
target_link_libraries(test_general_matrix_multiplication_naive GTest::gtest GTest::gtest_main ${CUTE_GENERAL_MATRIX_MULTIPLICATION} CUDA::cublas)
set_target_properties(test_general_matrix_multiplication_naive PROPERTIES CUDA_ARCHITECTURES native)

add_test(TestAllGeneralMatrixMultiplicationNaive test_general_matrix_multiplication_naive)

add_executable(profile_general_matrix_multiplication_naive profile_general_matrix_multiplication_naive.cu)
target_include_directories(profile_general_matrix_multiplication_naive PRIVATE ${CUTE_GENERAL_MATRIX_MULTIPLICATION_INCLUDE} ${CUTLASS_INCLUDE_DIR} ${CUTLASS_UTILS_INCLUDE_DIR})
target_link_libraries(profile_general_matrix_multiplication_naive GTest::gtest GTest::gtest_main ${CUTE_GENERAL_MATRIX_MULTIPLICATION} CUDA::cublas)
set_target_properties(profile_general_matrix_multiplication_naive PROPERTIES CUDA_ARCHITECTURES native)

add_test(ProfileAllGeneralMatrixMultiplicationNaive profile_general_matrix_multiplication_naive)

add_executable(test_general_matrix_multiplication_naive_gmem_tiled_copy_tiled_mma test_general_matrix_multiplication_naive_gmem_tiled_copy_tiled_mma.cu)
target_include_directories(test_general_matrix_multiplication_naive_gmem_tiled_copy_tiled_mma PRIVATE ${CUTE_GENERAL_MATRIX_MULTIPLICATION_INCLUDE} ${CUTLASS_INCLUDE_DIR} ${CUTLASS_UTILS_INCLUDE_DIR})
target_link_libraries(test_general_matrix_multiplication_naive_gmem_tiled_copy_tiled_mma GTest::gtest GTest::gtest_main ${CUTE_GENERAL_MATRIX_MULTIPLICATION} CUDA::cublas)
set_target_properties(test_general_matrix_multiplication_naive_gmem_tiled_copy_tiled_mma PROPERTIES CUDA_ARCHITECTURES native)

add_test(TestAllGeneralMatrixMultiplicationNaiveGmemTiledCopyTiledMma test_general_matrix_multiplication_naive_gmem_tiled_copy_tiled_mma)

add_executable(profile_general_matrix_multiplication_naive_gmem_tiled_copy_tiled_mma profile_general_matrix_multiplication_naive_gmem_tiled_copy_tiled_mma.cu)
target_include_directories(profile_general_matrix_multiplication_naive_gmem_tiled_copy_tiled_mma PRIVATE ${CUTE_GENERAL_MATRIX_MULTIPLICATION_INCLUDE} ${CUTLASS_INCLUDE_DIR} ${CUTLASS_UTILS_INCLUDE_DIR})
target_link_libraries(profile_general_matrix_multiplication_naive_gmem_tiled_copy_tiled_mma GTest::gtest GTest::gtest_main ${CUTE_GENERAL_MATRIX_MULTIPLICATION} CUDA::cublas)
set_target_properties(profile_general_matrix_multiplication_naive_gmem_tiled_copy_tiled_mma PROPERTIES CUDA_ARCHITECTURES native)

add_test(ProfileAllGeneralMatrixMultiplicationNaiveGmemTiledCopyTiledMma profile_general_matrix_multiplication_naive_gmem_tiled_copy_tiled_mma)

add_executable(test_general_matrix_multiplication_tensor_core_gmem_tiled_copy_tiled_mma test_general_matrix_multiplication_tensor_core_gmem_tiled_copy_tiled_mma.cu)
target_include_directories(test_general_matrix_multiplication_tensor_core_gmem_tiled_copy_tiled_mma PRIVATE ${CUTE_GENERAL_MATRIX_MULTIPLICATION_INCLUDE} ${CUTLASS_INCLUDE_DIR} ${CUTLASS_UTILS_INCLUDE_DIR})
target_link_libraries(test_general_matrix_multiplication_tensor_core_gmem_tiled_copy_tiled_mma GTest::gtest GTest::gtest_main ${CUTE_GENERAL_MATRIX_MULTIPLICATION} CUDA::cublas)
set_target_properties(test_general_matrix_multiplication_tensor_core_gmem_tiled_copy_tiled_mma PROPERTIES CUDA_ARCHITECTURES native)

add_test(TestAllGeneralMatrixMultiplicationTensorCoreGmemTiledCopyTiledMma test_general_matrix_multiplication_tensor_core_gmem_tiled_copy_tiled_mma)


add_executable(profile_general_matrix_multiplication_tensor_core_gmem_tiled_copy_tiled_mma profile_general_matrix_multiplication_tensor_core_gmem_tiled_copy_tiled_mma.cu)
target_include_directories(profile_general_matrix_multiplication_tensor_core_gmem_tiled_copy_tiled_mma PRIVATE ${CUTE_GENERAL_MATRIX_MULTIPLICATION_INCLUDE} ${CUTLASS_INCLUDE_DIR} ${CUTLASS_UTILS_INCLUDE_DIR})
target_link_libraries(profile_general_matrix_multiplication_tensor_core_gmem_tiled_copy_tiled_mma GTest::gtest GTest::gtest_main ${CUTE_GENERAL_MATRIX_MULTIPLICATION} CUDA::cublas)
set_target_properties(profile_general_matrix_multiplication_tensor_core_gmem_tiled_copy_tiled_mma PROPERTIES CUDA_ARCHITECTURES native)

add_test(ProfileAllGeneralMatrixMultiplicationTensorCoreGmemTiledCopyTiledMma profile_general_matrix_multiplication_tensor_core_gmem_tiled_copy_tiled_mma)

add_executable(test_general_matrix_multiplication_tensor_core_gmem_tiled_copy_smem_tiled_copy_tiled_mma test_general_matrix_multiplication_tensor_core_gmem_tiled_copy_smem_tiled_copy_tiled_mma.cu)
target_include_directories(test_general_matrix_multiplication_tensor_core_gmem_tiled_copy_smem_tiled_copy_tiled_mma PRIVATE ${CUTE_GENERAL_MATRIX_MULTIPLICATION_INCLUDE} ${CUTLASS_INCLUDE_DIR} ${CUTLASS_UTILS_INCLUDE_DIR})
target_link_libraries(test_general_matrix_multiplication_tensor_core_gmem_tiled_copy_smem_tiled_copy_tiled_mma GTest::gtest GTest::gtest_main ${CUTE_GENERAL_MATRIX_MULTIPLICATION} CUDA::cublas)
set_target_properties(test_general_matrix_multiplication_tensor_core_gmem_tiled_copy_smem_tiled_copy_tiled_mma PROPERTIES CUDA_ARCHITECTURES native)

add_test(TestAllGeneralMatrixMultiplicationTensorCoreGmemTiledCopySmemTiledCopyTiledMma test_general_matrix_multiplication_tensor_core_gmem_tiled_copy_smem_tiled_copy_tiled_mma)


add_executable(profile_general_matrix_multiplication_tensor_core_gmem_tiled_copy_smem_tiled_copy_tiled_mma profile_general_matrix_multiplication_tensor_core_gmem_tiled_copy_smem_tiled_copy_tiled_mma.cu)
target_include_directories(profile_general_matrix_multiplication_tensor_core_gmem_tiled_copy_smem_tiled_copy_tiled_mma PRIVATE ${CUTE_GENERAL_MATRIX_MULTIPLICATION_INCLUDE} ${CUTLASS_INCLUDE_DIR} ${CUTLASS_UTILS_INCLUDE_DIR})
target_link_libraries(profile_general_matrix_multiplication_tensor_core_gmem_tiled_copy_smem_tiled_copy_tiled_mma GTest::gtest GTest::gtest_main ${CUTE_GENERAL_MATRIX_MULTIPLICATION} CUDA::cublas)
set_target_properties(profile_general_matrix_multiplication_tensor_core_gmem_tiled_copy_smem_tiled_copy_tiled_mma PROPERTIES CUDA_ARCHITECTURES native)

add_test(ProfileAllGeneralMatrixMultiplicationTensorCoreGmemTiledCopySmemTiledCopyTiledMma profile_general_matrix_multiplication_tensor_core_gmem_tiled_copy_smem_tiled_copy_tiled_mma)



add_executable(test_general_matrix_multiplication_naive_gmem_tiled_copy_tiled_mma_sm70_pipeline test_general_matrix_multiplication_naive_gmem_tiled_copy_tiled_mma_sm70_pipeline.cu)
target_include_directories(test_general_matrix_multiplication_naive_gmem_tiled_copy_tiled_mma_sm70_pipeline PRIVATE ${CUTE_GENERAL_MATRIX_MULTIPLICATION_INCLUDE} ${CUTLASS_INCLUDE_DIR} ${CUTLASS_UTILS_INCLUDE_DIR})
target_link_libraries(test_general_matrix_multiplication_naive_gmem_tiled_copy_tiled_mma_sm70_pipeline GTest::gtest GTest::gtest_main ${CUTE_GENERAL_MATRIX_MULTIPLICATION} CUDA::cublas)
set_target_properties(test_general_matrix_multiplication_naive_gmem_tiled_copy_tiled_mma_sm70_pipeline PROPERTIES CUDA_ARCHITECTURES native)

add_test(TestAllGeneralMatrixMultiplicationNaiveGmemTiledCopyTiledMmaSm70Pipeline test_general_matrix_multiplication_naive_gmem_tiled_copy_tiled_mma_sm70_pipeline)

add_executable(profile_general_matrix_multiplication_naive_gmem_tiled_copy_tiled_mma_sm70_pipeline profile_general_matrix_multiplication_naive_gmem_tiled_copy_tiled_mma_sm70_pipeline.cu)
target_include_directories(profile_general_matrix_multiplication_naive_gmem_tiled_copy_tiled_mma_sm70_pipeline PRIVATE ${CUTE_GENERAL_MATRIX_MULTIPLICATION_INCLUDE} ${CUTLASS_INCLUDE_DIR} ${CUTLASS_UTILS_INCLUDE_DIR})
target_link_libraries(profile_general_matrix_multiplication_naive_gmem_tiled_copy_tiled_mma_sm70_pipeline GTest::gtest GTest::gtest_main ${CUTE_GENERAL_MATRIX_MULTIPLICATION} CUDA::cublas)
set_target_properties(profile_general_matrix_multiplication_naive_gmem_tiled_copy_tiled_mma_sm70_pipeline PROPERTIES CUDA_ARCHITECTURES native)

add_test(ProfileAllGeneralMatrixMultiplicationNaiveGmemTiledCopyTiledMmaSm70Pipeline profile_general_matrix_multiplication_naive_gmem_tiled_copy_tiled_mma_sm70_pipeline)

add_executable(test_general_matrix_multiplication_tensor_core_gmem_tiled_copy_tiled_mma_sm80_pipeline test_general_matrix_multiplication_tensor_core_gmem_tiled_copy_tiled_mma_sm80_pipeline.cu)
target_include_directories(test_general_matrix_multiplication_tensor_core_gmem_tiled_copy_tiled_mma_sm80_pipeline PRIVATE ${CUTE_GENERAL_MATRIX_MULTIPLICATION_INCLUDE} ${CUTLASS_INCLUDE_DIR} ${CUTLASS_UTILS_INCLUDE_DIR})
target_link_libraries(test_general_matrix_multiplication_tensor_core_gmem_tiled_copy_tiled_mma_sm80_pipeline GTest::gtest GTest::gtest_main ${CUTE_GENERAL_MATRIX_MULTIPLICATION} CUDA::cublas)
set_target_properties(test_general_matrix_multiplication_tensor_core_gmem_tiled_copy_tiled_mma_sm80_pipeline PROPERTIES CUDA_ARCHITECTURES native)

add_test(TestAllGeneralMatrixMultiplicationTensorCoreGmemTiledCopyTiledMmaSm80Pipeline test_general_matrix_multiplication_tensor_core_gmem_tiled_copy_tiled_mma_sm80_pipeline)

add_executable(profile_general_matrix_multiplication_tensor_core_gmem_tiled_copy_tiled_mma_sm80_pipeline profile_general_matrix_multiplication_tensor_core_gmem_tiled_copy_tiled_mma_sm80_pipeline.cu)
target_include_directories(profile_general_matrix_multiplication_tensor_core_gmem_tiled_copy_tiled_mma_sm80_pipeline PRIVATE ${CUTE_GENERAL_MATRIX_MULTIPLICATION_INCLUDE} ${CUTLASS_INCLUDE_DIR} ${CUTLASS_UTILS_INCLUDE_DIR})
target_link_libraries(profile_general_matrix_multiplication_tensor_core_gmem_tiled_copy_tiled_mma_sm80_pipeline GTest::gtest GTest::gtest_main ${CUTE_GENERAL_MATRIX_MULTIPLICATION} CUDA::cublas)
set_target_properties(profile_general_matrix_multiplication_tensor_core_gmem_tiled_copy_tiled_mma_sm80_pipeline PROPERTIES CUDA_ARCHITECTURES native)

add_test(ProfileAllGeneralMatrixMultiplicationTensorCoreGmemTiledCopyTiledMmaSm80Pipeline profile_general_matrix_multiplication_tensor_core_gmem_tiled_copy_tiled_mma_sm80_pipeline)



add_executable(test_general_matrix_multiplication_tensor_core_gmem_tiled_copy_smem_tiled_copy_tiled_mma_sm80_pipeline test_general_matrix_multiplication_tensor_core_gmem_tiled_copy_smem_tiled_copy_tiled_mma_sm80_pipeline.cu)
target_include_directories(test_general_matrix_multiplication_tensor_core_gmem_tiled_copy_smem_tiled_copy_tiled_mma_sm80_pipeline PRIVATE ${CUTE_GENERAL_MATRIX_MULTIPLICATION_INCLUDE} ${CUTLASS_INCLUDE_DIR} ${CUTLASS_UTILS_INCLUDE_DIR})
target_link_libraries(test_general_matrix_multiplication_tensor_core_gmem_tiled_copy_smem_tiled_copy_tiled_mma_sm80_pipeline GTest::gtest GTest::gtest_main ${CUTE_GENERAL_MATRIX_MULTIPLICATION} CUDA::cublas)
set_target_properties(test_general_matrix_multiplication_tensor_core_gmem_tiled_copy_smem_tiled_copy_tiled_mma_sm80_pipeline PROPERTIES CUDA_ARCHITECTURES native)

add_test(TestAllGeneralMatrixMultiplicationTensorCoreGmemTiledCopySmemTiledCopyTiledMmaSm80Pipeline test_general_matrix_multiplication_tensor_core_gmem_tiled_copy_smem_tiled_copy_tiled_mma_sm80_pipeline)

add_executable(profile_general_matrix_multiplication_tensor_core_gmem_tiled_copy_smem_tiled_copy_tiled_mma_sm80_pipeline profile_general_matrix_multiplication_tensor_core_gmem_tiled_copy_smem_tiled_copy_tiled_mma_sm80_pipeline.cu)
target_include_directories(profile_general_matrix_multiplication_tensor_core_gmem_tiled_copy_smem_tiled_copy_tiled_mma_sm80_pipeline PRIVATE ${CUTE_GENERAL_MATRIX_MULTIPLICATION_INCLUDE} ${CUTLASS_INCLUDE_DIR} ${CUTLASS_UTILS_INCLUDE_DIR})
target_link_libraries(profile_general_matrix_multiplication_tensor_core_gmem_tiled_copy_smem_tiled_copy_tiled_mma_sm80_pipeline GTest::gtest GTest::gtest_main ${CUTE_GENERAL_MATRIX_MULTIPLICATION} CUDA::cublas)
set_target_properties(profile_general_matrix_multiplication_tensor_core_gmem_tiled_copy_smem_tiled_copy_tiled_mma_sm80_pipeline PROPERTIES CUDA_ARCHITECTURES native)

add_test(ProfileAllGeneralMatrixMultiplicationTensorCoreGmemTiledCopySmemTiledCopyTiledMmaSm80Pipeline profile_general_matrix_multiplication_tensor_core_gmem_tiled_copy_smem_tiled_copy_tiled_mma_sm80_pipeline)
