cmake_minimum_required(VERSION 3.28)

project(CUTE-TRANSPOSE-NAIVE-TEST VERSION 0.0.1 LANGUAGES CXX CUDA)

find_package(GTest REQUIRED)
# Find CUDA Toolkit
find_package(CUDAToolkit REQUIRED)

find_path(CUTE_TRANSPOSE_INCLUDE cute_transpose.hpp HINTS ${CMAKE_SOURCE_DIR}/examples/cute_transpose/)

add_executable(test_matrix_transpose_naive test_matrix_transpose_naive.cu)
target_include_directories(test_matrix_transpose_naive PRIVATE ${CUTE_TRANSPOSE_INCLUDE})
target_link_libraries(test_matrix_transpose_naive GTest::gtest GTest::gtest_main ${CUTE_TRANSPOSE})
set_target_properties(test_matrix_transpose_naive PROPERTIES CUDA_ARCHITECTURES native)

add_test(TestAllMatrixTransposeNaive test_matrix_transpose_naive)

add_executable(profile_matrix_transpose_naive profile_matrix_transpose_naive.cu)
target_include_directories(profile_matrix_transpose_naive PRIVATE ${CUTE_TRANSPOSE_INCLUDE})
target_link_libraries(profile_matrix_transpose_naive GTest::gtest GTest::gtest_main ${CUTE_TRANSPOSE})
set_target_properties(profile_matrix_transpose_naive PROPERTIES CUDA_ARCHITECTURES native)

add_test(ProfileAllMatrixTransposeNaive profile_matrix_transpose_naive)

add_executable(test_matrix_transpose_shared_memory_bank_conflicts test_matrix_transpose_shared_memory_bank_conflicts.cu)
target_include_directories(test_matrix_transpose_shared_memory_bank_conflicts PRIVATE ${CUTE_TRANSPOSE_INCLUDE})
target_link_libraries(test_matrix_transpose_shared_memory_bank_conflicts GTest::gtest GTest::gtest_main ${CUTE_TRANSPOSE})
set_target_properties(test_matrix_transpose_shared_memory_bank_conflicts PROPERTIES CUDA_ARCHITECTURES native)

add_test(TestAllMatrixTransposeSharedMemoryBankConflicts test_matrix_transpose_shared_memory_bank_conflicts)

add_executable(profile_matrix_transpose_shared_memory_bank_conflicts profile_matrix_transpose_shared_memory_bank_conflicts.cu)
target_include_directories(profile_matrix_transpose_shared_memory_bank_conflicts PRIVATE ${CUTE_TRANSPOSE_INCLUDE})
target_link_libraries(profile_matrix_transpose_shared_memory_bank_conflicts GTest::gtest GTest::gtest_main ${CUTE_TRANSPOSE})
set_target_properties(profile_matrix_transpose_shared_memory_bank_conflicts PROPERTIES CUDA_ARCHITECTURES native)

add_test(ProfileAllMatrixTransposeSharedMemoryBankConflicts profile_matrix_transpose_shared_memory_bank_conflicts)

